Fix for TradeUtils