@@ -33,12 +33,12 @@ import net.minecraft.item.Items;
 import net.minecraft.util.math.random.Random;
 import net.minecraft.village.TradeOffer;
 import net.minecraft.village.TradeOffers;
+import net.minecraft.village.TradedItem;
 import net.minecraft.village.VillagerProfession;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 public final class TradeUtils {
 
@@ -59,18 +59,18 @@ public final class TradeUtils {
 	private TradeUtils() {/* No instantiation. */}
 
 	public static TradeOffer createSell(ItemConvertible item, int price, int count, int maxUses, int experience) {
-		return new TradeOffer(new ItemStack(Items.EMERALD, price), new ItemStack(item, count), maxUses, experience, 0.05F);
+		return new TradeOffer(new TradedItem(Items.EMERALD, price), new ItemStack(item, count), maxUses, experience, 0.05F);
 	}
 
 	public static TradeOffer createBuy(ItemConvertible item, int price, int count, int maxUses, int experience) {
-		return new TradeOffer(new ItemStack(item, count), new ItemStack(Items.EMERALD, price), maxUses, experience, 0.05F);
+		return new TradeOffer(new TradedItem(item, count), new ItemStack(Items.EMERALD, price), maxUses, experience, 0.05F);
 	}
 
 	@Contract("null -> null; !null -> new")
 	public static TradeOffer copy(TradeOffer tradeOffer) {
 		if (tradeOffer == null)
 			return null;
-		return new TradeOffer(tradeOffer.toNbt());
+		return tradeOffer.copy();
 	}
 
 	public static TradeOffers.Factory asFactory(TradeOffer tradeOffer) {
@@ -94,7 +94,7 @@ public final class TradeUtils {
 		Int2ObjectMap<TradeOffers.Factory[]> allTrades = TradeOffers.PROFESSION_TO_LEVELED_TRADE.getOrDefault(profession, new Int2ObjectArrayMap<>(Level.SIZE));
 		TradeOffers.Factory[] oldLevelTrades = allTrades.getOrDefault(level.asInt(), new TradeOffers.Factory[0]);
 		TradeOffers.Factory[] newLevelTrades = new TradeOffers.Factory[tradeOffers.length];
-		newLevelTrades = Arrays.stream(tradeOffers).map(TradeUtils::asFactory).collect(Collectors.toList()).toArray(newLevelTrades);
+		newLevelTrades = Arrays.stream(tradeOffers).map(TradeUtils::asFactory).toList().toArray(newLevelTrades);
 		TradeOffers.Factory[] allLevelTrades;
 
 		if (replace)
